--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<p>I'm hosted with GitHub Pages.</p>
 	<div class="center">
 		<a href="worksheet.html">Worksheet</a>
+		<a href="class_notes.html">Class Notes</a>
 	</div>
+
 
 </body>
 
