--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <html>
 
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-	<h1 class="title center">StatP</h1>
-	<p>I'm hosted with GitHub Pages.</p>
-	<div class="center">
-		<a href="worksheet.html">Worksheet</a>
-		<a href="class_notes.html">Class Notes</a>
-	</div>
+	<div class="content">
+		<h1 class="title center">StatP</h1>
+		<p class="welcome">Hi there, welcome.</p>
 
+		<div class="center">
+			<a href="worksheet.html">Worksheet</a>
+			<a href="class_notes.html">Class Notes</a>
+		</div>
+	</div>
 
 </body>
 
