--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 	<div class="content">
 		<h1 class="title center">StatP</h1>
 		<p class="welcome">Hi there, welcome.</p>
-
-		<div class="center">
-			<a href="worksheet.html">Worksheet</a>
-			<a href="class_notes.html">Class Notes</a>
-		</div>
 	</div>
+		<div class="nav-bar">
+			<table class= "nav-table">
+			<tr><td><a href="">Home</a></td></tr>
+				<tr><td><a href="worksheet.html">Worksheet</a></td></tr>
+				<tr><td><a href="class_notes.html">Class Notes</a></td></tr>
+				<tr><td><a href="">Contact Me</a></td></tr>
+			</table>
+		</div>
 
 </body>
 
