--- a/worksheet.html
+++ b/worksheet.html
@@ -5,6 +5,14 @@
 
 <body>
 	hi.
+	<div class="nav-bar">
+			<table class= "nav-table">
+			<tr><td><a href="index.html">Home</a></td></tr>
+				<tr><td><a href="worksheet.html">Worksheet</a></td></tr>
+				<tr><td><a href="class_notes.html">Class Notes</a></td></tr>
+				<tr><td><a href="">Contact Me</a></td></tr>
+			</table>
+		</div>
 </body>
 s
 </html>
