--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src= "https://www.w3schools.com/lib/w3data.js"></script>
+	<script src= "www.w3schools.com/lib/w3data.js"></script>
 </head>
 
 <body>
