--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src= "www.w3schools.com/lib/w3data.js"></script>
 </head>
 
 <body>
@@ -12,8 +11,14 @@
 		<h1 class="title center">StatP</h1>
 		<p class="welcome">Hi there, welcome.</p>
 	</div>
-	<div w3-include-html="navigation.html"></div>
-	<script> w3IncludeHTML();</script>
+		<div class="nav-bar">
+			<table class= "nav-table">
+			<tr><td><a href="index.html">Home</a></td></tr>
+				<tr><td><a href="worksheet.html">Worksheet</a></td></tr>
+				<tr><td><a href="class_notes.html">Class Notes</a></td></tr>
+				<tr><td><a href="contact.html">Contact Me</a></td></tr>
+			</table>
+		</div>
 
 </body>
 
