--- a/worksheet.html
+++ b/worksheet.html
@@ -10,9 +10,9 @@
 			<tr><td><a href="index.html">Home</a></td></tr>
 				<tr><td><a href="worksheet.html">Worksheet</a></td></tr>
 				<tr><td><a href="class_notes.html">Class Notes</a></td></tr>
-				<tr><td><a href="">Contact Me</a></td></tr>
+				<tr><td><a href="contact.html">Contact Me</a></td></tr>
 			</table>
 		</div>
 </body>
-s
+
 </html>
