--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
 </head>
 
 <body>
-	e-mail address: jingyi_liu_hi@berkeley.edu
+	<div class="content">
+		<h1 class="email center">E-mail address: jingyi_liu_hi@berkeley.edu</h1>
+		<p class="help">Let me know if I can help.</p>
+	</div>
+	
 	<div class="nav-bar">
 			<table class= "nav-table">
 			<tr><td><a href="index.html">Home</a></td></tr>
