--- a/worksheet.html
+++ b/worksheet.html
@@ -4,7 +4,12 @@
 </head>
 
 <body>
-	hi.
+	<div class="content">
+		<p1 class="welcome">Worksheet 1</p1>
+		<p2 class="welcome">Worksheet 2</p2>
+		<p3 class="welcome">Worksheet 3</p3>
+		<p4 class="welcome">Worksheet 1</p4>
+	</div>
 	<div class="nav-bar">
 			<table class= "nav-table">
 			<tr><td><a href="index.html">Home</a></td></tr>
