--- a/worksheet.html
+++ b/worksheet.html
@@ -5,14 +5,22 @@
 
 <body>
 	<div class="content">
-		<p1 class="welcome">Worksheet 1</p1>
-		<p2 class="welcome">Worksheet 2</p2>
-		<p3 class="welcome">Worksheet 3</p3>
-		<p4 class="welcome">Worksheet 1</p4>
+		<h1 class="email center">Worksheet</h1>
+		<table class="answer">
+			<tr><td><a href="worksheet/wkst1.docx">Worksheet 1</a></td>
+				<td><a href="worksheet/wkst1ans.docx">Answer Key</a></td>
+			</tr>
+			<tr><td><a href="worksheet/wkst2.docx">Worksheet 2</a></td>
+				<td><a href="worksheet/wkst2ans.docx">Answer Key</a></td>
+			</tr>
+			<tr><td><a href="worksheet/wkst3.docx">Worksheet 3</a></td>
+				<td><a href="worksheet/wkst3ans.docx">Answer Key</a></td>
+			</tr>
+		</table>
 	</div>
 	<div class="nav-bar">
 			<table class= "nav-table">
-			<tr><td><a href="index.html">Home</a></td></tr>
+				<tr><td><a href="index.html">Home</a></td></tr>
 				<tr><td><a href="worksheet.html">Worksheet</a></td></tr>
 				<tr><td><a href="class_notes.html">Class Notes</a></td></tr>
 				<tr><td><a href="contact.html">Contact Me</a></td></tr>
