--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
 
 <body>
 	<div class="content">
-		<h1 class="email center">Contact Me</h1>
-		<p class="help">E-mail address: jingyi_liu_hi@berkeley.edu</p>
+		<h1 class="title center">Contact Me</h1>
+		<p class="help center">E-mail address: jingyi_liu_hi@berkeley.edu</p>
 	</div>
 	
 	<div class="nav-bar">
