--- a/worksheet.html
+++ b/worksheet.html
@@ -5,7 +5,7 @@
 
 <body>
 	<div class="content">
-		<h1 class="email center">Worksheet</h1>
+		<h1 class="title center">Worksheet</h1>
 		<table class="answer">
 			<tr><td><a href="worksheet/wkst1.docx">Worksheet 1</a></td>
 				<td><a href="worksheet/wkst1ans.docx">Answer Key</a></td>
