--- a/class_notes.html
+++ b/class_notes.html
@@ -5,7 +5,18 @@
 </head>
 
 <body>
-	hi.
+	<div class="content">
+		<h1 class="title center">Class Notes</h1>
+		<div class="center">
+			<table class= "centered">
+				<tr><td><a href="classnotes/lec1.docx">Lecture 1</a></td>
+				</tr>
+				<tr><td><a href="classnotes/lec2.docx">Lecture 2</a></td>
+				</tr>
+				<tr><td><a href="classnotes/lec3.docx">Lecture 3</a></td>
+				</tr>
+			</table>
+		</div>
 	<div class="nav-bar">
 			<table class= "nav-table">
 			<tr><td><a href="index.html">Home</a></td></tr>
@@ -15,5 +26,5 @@
 			</table>
 		</div>
 </body>
-s
+
 </html>
