--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,16 @@
 	<div class="content">
 		<h1 class="title center">Contact Me</h1>
 		<p class="help center">E-mail address: jingyi_liu_hi@berkeley.edu</p>
-	</div>
 	
+		<div class="white-box">
+			Office Hour<br>
+			M,W 12-1pm, 4-9pm; <br>
+			T,Th 12-1pm, 4-5pm, 6:30-9pm;<br>
+			F 12-1pm;<br>
+			Location: Cesar E. Chevez Student Center;<br>
+			Drop-in Hour: M-Th: 12-9pm; F: 12-5pm; Sun: 7-9pm;<br>
+		</div>
+	</div>
 	<div class="nav-bar">
 			<table class= "nav-table">
 			<tr><td><a href="index.html">Home</a></td></tr>
