--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
 	</div>
 	<div class="nav-bar">
 			<table class= "nav-table">
-			<tr><td><a href="index.html">Home</a></td></tr>
-				<tr><td><a href="worksheet.html">Worksheet</a></td></tr>
-				<tr><td><a href="class_notes.html">Class Notes</a></td></tr>
-				<tr><td><a href="contact.html">Contact Me</a></td></tr>
+				<tr><td><button onClick="window.location.href='index.html'">Home</button></td></tr>
+				<tr><td><button onClick="window.location.href='worksheet.html'">Worksheet</button></td></tr>
+				<tr><td><button onClick="window.location.href='class_notes.html'">Class Notes</button></td></tr>
+				<tr><td><button onClick="window.location.href='contact.html'">Contact Me</button></td></tr>
 			</table>
 		</div>
 </body>
