--- a/worksheet.html
+++ b/worksheet.html
@@ -16,14 +16,23 @@
 			<tr><td><a href="worksheet/wkst3.docx">Worksheet 3</a></td>
 				<td><a href="worksheet/wkst3ans.docx">Answer Key</a></td>
 			</tr>
+			<tr><td><a href="worksheet/wkst4.docx">Worksheet 4</a></td>
+				<td><a href="worksheet/wkst4ans.docx">Answer Key</a></td>
+			</tr>
+			<tr><td><a href="worksheet/wkst5.docx">Worksheet 5</a></td>
+				<td><a href="worksheet/wkst5ans.docx">Answer Key</a></td>
+			</tr>
+			<tr><td><a href="worksheet/wkst5.docx">Worksheet 5(2)</a></td>
+				<td><a href="worksheet/wkst5ans.docx">Answer Key</a></td>
+			</tr>
 		</table>
 	</div>
 	<div class="nav-bar">
 			<table class= "nav-table">
-				<tr><td><a href="index.html">Home</a></td></tr>
-				<tr><td><a href="worksheet.html">Worksheet</a></td></tr>
-				<tr><td><a href="class_notes.html">Class Notes</a></td></tr>
-				<tr><td><a href="contact.html">Contact Me</a></td></tr>
+				<tr><td><button onClick="window.location.href='index.html'">Home</button></td></tr>
+				<tr><td><button onClick="window.location.href='worksheet.html'">Worksheet</button></td></tr>
+				<tr><td><button onClick="window.location.href='class_notes.html'">Class Notes</button></td></tr>
+				<tr><td><button onClick="window.location.href='contact.html'">Contact Me</button></td></tr>
 			</table>
 		</div>
 </body>
