--- a/class_notes.html
+++ b/class_notes.html
@@ -15,14 +15,18 @@
 				</tr>
 				<tr><td><a href="classnotes/lec3.docx">Lecture 3</a></td>
 				</tr>
+				<tr><td><a href="classnotes/lec4.docx">Lecture 4</a></td>
+				</tr>
+				<tr><td><a href="classnotes/lec5.docx">Lecture 5</a></td>
+				</tr>
 			</table>
 		</div>
 	<div class="nav-bar">
 			<table class= "nav-table">
-			<tr><td><a href="index.html">Home</a></td></tr>
-				<tr><td><a href="worksheet.html">Worksheet</a></td></tr>
-				<tr><td><a href="class_notes.html">Class Notes</a></td></tr>
-				<tr><td><a href="contact.html">Contact Me</a></td></tr>
+				<tr><td><button onClick="window.location.href='index.html'">Home</button></td></tr>
+				<tr><td><button onClick="window.location.href='worksheet.html'">Worksheet</button></td></tr>
+				<tr><td><button onClick="window.location.href='class_notes.html'">Class Notes</button></td></tr>
+				<tr><td><button onClick="window.location.href='contact.html'">Contact Me</button></td></tr>
 			</table>
 		</div>
 </body>
