--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1 class="title center">StatP</h1>
 			<p class="welcome">Hi there, welcome.</p>
 		<div class="white-box">
-			My name is Jing Liu and I am your workshop leader for StatP. This six-week long class is pretty intense and challenging. I am glad that each one of you chose to embrace the challenge (that's why you are here).You can find worksheets, answer keys, and lecture notes here. Don't hesitate to contact me if you have any questions. :)
+			My name is Jing Liu and I am one of the workshop leaders for StatP. This six-week long class is pretty intense and challenging. I am glad that each one of you chose to embrace the challenge (that's why you are here).You can find worksheets, answer keys, and lecture notes here. Don't hesitate to contact me if you have any questions. :)
 		</div>
 	</div>
 		<div class="nav-bar">
